feat: Integração completa com MCP Ecosystem
✨ Funcionalidades adicionadas:
- Configuração de integração MCP (mcp-ecosystem-integration.json)
- Adaptador para ecossistema MCP (mcp/ecosystem-adapter.js)
- Script automático de deployment (scripts/deploy-to-ecosystem.js)
- Documentação completa da integração (docs/MCP_ECOSYSTEM_INTEGRATION.md)
- Scripts npm para gestão da integração

🔧 Melhorias:
- Rules engine integrado com GitHub API
- Monitoramento e métricas automáticas
- Health checks e observabilidade
- Backup automático em deployments
- Suporte a rollback

🚀 Capacidades MCP:
- 6 ferramentas GitHub especializadas
- 4 recursos URI para dados GitHub
- Integração com SAGE e Rules Engine
- Segurança e rate limiting automático
- Sincronização bidirecional de contexto

📦 Scripts adicionados:
- npm run mcp:ecosystem
- npm run deploy:ecosystem
- npm run deploy:check
- npm run deploy:rollback
- npm run ecosystem:status

--- a/package.json
+++ b/package.json
@@ -24,7 +24,13 @@
     "clean": "rm -rf node_modules package-lock.json || echo 'Limpeza concluída'",
     "setup": "npm install && npm run format && npm run validate-env",
     "ci": "npm run validate && npm run validate-env",
-    "health": "npm run validate-env && echo 'Projeto saudável!'"
+    "health": "npm run validate-env && echo 'Projeto saudável!'",
+    "mcp": "node mcp/github-mcp-server.js",
+    "mcp:ecosystem": "node mcp/ecosystem-adapter.js",
+    "deploy:ecosystem": "node scripts/deploy-to-ecosystem.js",
+    "deploy:check": "node scripts/deploy-to-ecosystem.js --dry-run",
+    "deploy:rollback": "node scripts/deploy-to-ecosystem.js --rollback",
+    "ecosystem:status": "node -e \"import('./mcp/ecosystem-adapter.js').then(m => new m.GitHubMCPEcosystemAdapter().getStatus()).then(console.log)\""
   },
   "keywords": [
     "github",
