--- a/package.json
+++ b/package.json
@@ -1,73 +1,74 @@
 {
-  "name": "github-mastery",
-  "version": "1.0.0",
-  "description": "Domínio total do GitHub: API, automações, integrações e ferramentas avançadas",
+    "name": "github-mastery",
+    "version": "1.0.0",
+    "description": "Domínio total do GitHub: API, automações, integrações e ferramentas avançadas",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start": "node cli-tools/gh-cli.js",
-    "agent": "node agents/github-agent.js",
-    "gco": "node agents/github-agent.js quick-contribution",
-    "gcd": "node agents/github-agent.js daily",
-    "gcw": "node agents/github-agent.js weekly",
-    "gcstats": "node agents/github-agent.js stats",
-    "homepage": "start https://neo-sh1w4.github.io/github_mastery/",
-    "homepage:local": "start index.html",
-    "webhook": "node webhooks/webhook-server.js",
-    "example": "node examples/basic-api-usage.js",
-    "serve": "node serve-homepage.js",
-    "api:simple": "node api/simple-rest-server.js",
-    "start:all": "node run-all.js",
-    "validate-env": "node -e \"import('./utils/env-validator.js').then(m => m.runFullValidation())\"",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "test:ci": "jest --ci --coverage --watchAll=false",
-    "lint": "eslint **/*.js --ignore-pattern node_modules/",
-    "lint:fix": "eslint **/*.js --fix --ignore-pattern node_modules/",
-    "format": "prettier --write **/*.js --ignore-path .gitignore",
-    "format:check": "prettier --check **/*.js --ignore-path .gitignore",
-    "dev": "nodemon webhooks/webhook-server.js",
-    "validate": "npm run lint && npm run format:check",
-    "clean": "powershell -Command \"if (Test-Path node_modules) { Remove-Item -Recurse -Force node_modules }; if (Test-Path package-lock.json) { Remove-Item -Force package-lock.json }; Write-Host 'Limpeza concluída!'\"",
-    "setup": "npm install && npm run format && npm run validate-env",
-    "ci": "npm run validate && npm run validate-env",
-    "health": "npm run validate-env && echo 'Projeto saudável!'",
-    "mcp": "node mcp/github-mcp-server.js",
-    "mcp:ecosystem": "node mcp/ecosystem-adapter.js",
-    "deploy:ecosystem": "node scripts/deploy-to-ecosystem.js",
-    "deploy:check": "node scripts/deploy-to-ecosystem.js --dry-run",
-    "deploy:rollback": "node scripts/deploy-to-ecosystem.js --rollback",
-    "ecosystem:status": "node -e \"import('./mcp/ecosystem-adapter.js').then(m => new m.GitHubMCPEcosystemAdapter().getStatus()).then(console.log)\""
-  },
-  "keywords": [
-    "github",
-    "api",
-    "automation",
-    "cli",
-    "webhooks",
-    "git"
-  ],
-  "author": "João",
-  "license": "MIT",
-  "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.13.3",
-    "@octokit/auth-token": "^4.0.0",
-    "@octokit/rest": "^20.0.2",
-    "chalk": "^5.3.0",
-    "commander": "^11.1.0",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "inquirer": "^9.2.12",
-    "winston": "^3.17.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.28.0",
-    "@babel/preset-env": "^7.28.0",
-    "@jest/globals": "^30.0.3",
-    "babel-jest": "^30.0.2",
-    "eslint": "^8.57.0",
-    "jest": "^30.0.3",
-    "nodemon": "^3.0.2",
-    "prettier": "^3.1.1"
-  }
+        "start": "node cli-tools/gh-cli.js",
+        "agent": "node agents/github-agent.js",
+        "gco": "node agents/github-agent.js quick-contribution",
+        "gcd": "node agents/github-agent.js daily",
+        "gcw": "node agents/github-agent.js weekly",
+        "gcstats": "node agents/github-agent.js stats",
+        "homepage": "start https://neo-sh1w4.github.io/github_mastery/",
+        "homepage:local": "start index.html",
+        "webhook": "node webhooks/webhook-server.js",
+        "example": "node examples/basic-api-usage.js",
+        "serve": "node serve-homepage.js",
+        "api:simple": "node api/simple-rest-server.js",
+        "start:all": "node run-all.js",
+        "validate-env": "node -e \"import('./utils/env-validator.js').then(m => m.runFullValidation())\"",
+        "test": "jest",
+        "test:watch": "jest --watch",
+        "test:coverage": "jest --coverage",
+        "test:ci": "jest --ci --coverage --watchAll=false",
+        "lint": "eslint **/*.js --ignore-pattern node_modules/",
+        "lint:fix": "eslint **/*.js --fix --ignore-pattern node_modules/",
+        "format": "prettier --write **/*.js --ignore-path .gitignore",
+        "format:check": "prettier --check **/*.js --ignore-path .gitignore",
+        "dev": "nodemon webhooks/webhook-server.js",
+        "validate": "npm run lint && npm run format:check",
+        "clean": "powershell -Command \"if (Test-Path node_modules) { Remove-Item -Recurse -Force node_modules }; if (Test-Path package-lock.json) { Remove-Item -Force package-lock.json }; Write-Host 'Limpeza concluída!'\"",
+        "setup": "npm install && npm run format && npm run validate-env",
+        "ci": "npm run validate && npm run validate-env",
+        "health": "npm run validate-env && echo 'Projeto saudável!'",
+        "mcp": "node mcp/github-mcp-server.js",
+        "mcp:ecosystem": "node mcp/ecosystem-adapter.js",
+        "deploy:ecosystem": "node scripts/deploy-to-ecosystem.js",
+        "deploy:check": "node scripts/deploy-to-ecosystem.js --dry-run",
+        "deploy:rollback": "node scripts/deploy-to-ecosystem.js --rollback",
+        "ecosystem:status": "node -e \"import('./mcp/ecosystem-adapter.js').then(m => new m.GitHubMCPEcosystemAdapter().getStatus()).then(console.log)\""
+    },
+    "keywords": [
+        "github",
+        "api",
+        "automation",
+        "cli",
+        "webhooks",
+        "git"
+    ],
+    "author": "João",
+    "license": "MIT",
+    "dependencies": {
+        "@modelcontextprotocol/sdk": "^1.13.3",
+        "@octokit/auth-token": "^4.0.0",
+        "@octokit/rest": "^20.0.2",
+        "chalk": "^5.3.0",
+        "commander": "^11.1.0",
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
+        "inquirer": "^9.2.12",
+        "winston": "^3.17.0"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.28.0",
+        "@babel/preset-env": "^7.28.0",
+        "@jest/globals": "^30.0.3",
+        "babel-jest": "^30.0.2",
+        "eslint": "^8.57.0",
+        "jest": "^30.0.3",
+        "nodemon": "^3.0.2",
+        "prettier": "^3.1.1"
+    }
 }
