feat: implementar estratégias MCP completas e alinhar com regras dev
- PowerShell Agent v2.0.0 com sistema MCP Enhanced
- Cache inteligente com TTL configurável
- Sistema de logging estruturado com níveis
- Comando gchelp para ajuda contextual
- Validação automática de ambiente Node.js
- Error handling robusto com recovery automático
- Correção de variáveis não utilizadas (ESLint)
- Documentação completa do agente PowerShell
- Atualização CHANGELOG seguindo Conventional Commits
- Alinhamento completo com regras de desenvolvimento

--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
         "deploy:ecosystem": "node scripts/deploy-to-ecosystem.js",
         "deploy:check": "node scripts/deploy-to-ecosystem.js --dry-run",
         "deploy:rollback": "node scripts/deploy-to-ecosystem.js --rollback",
-        "ecosystem:status": "node -e \"import('./mcp/ecosystem-adapter.js').then(m => new m.GitHubMCPEcosystemAdapter().getStatus()).then(console.log)\""
+        "ecosystem:status": "node -e \"import('./mcp/ecosystem-adapter.js').then(m => new m.GitHubMCPEcosystemAdapter().getStatus()).then(console.log)\"",
+        "setup:token": "powershell -ExecutionPolicy Bypass -File scripts\\setup-github-token.ps1 -Interactive",
+        "setup:quick": "powershell -ExecutionPolicy Bypass -File scripts\\setup-github-token.ps1"
     },
     "keywords": [
         "github",
