--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
     "name": "github-mastery",
     "version": "1.0.0",
     "description": "Domínio total do GitHub: API, automações, integrações e ferramentas avançadas",
-  "main": "index.js",
-  "type": "module",
-  "scripts": {
+    "main": "index.js",
+    "type": "module",
+    "scripts": {
         "start": "node cli-tools/gh-cli.js",
         "agent": "node agents/github-agent.js",
         "gco": "node agents/github-agent.js quick-contribution",
@@ -59,6 +59,7 @@
         "chalk": "^5.3.0",
         "commander": "^11.1.0",
         "dotenv": "^16.3.1",
+        "ethers": "^6.15.0",
         "express": "^4.18.2",
         "inquirer": "^9.2.12",
         "winston": "^3.17.0"
