--- a/github-agent-core/Cargo.toml
+++ b/github-agent-core/Cargo.toml
@@ -34,6 +34,9 @@ base64 = "0.21"
 # Performance
 mimalloc = { version = "0.1", optional = true }
 
+# Async utilities
+futures = "0.3"
+
 # Python integration
 pyo3 = { version = "0.20", features = ["extension-module"], optional = true }
 
