--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,33 +1,42 @@
 {
-    "env": {
-        "browser": true,
-        "es2021": true,
-        "node": true
+  "env": {
+    "browser": true,
+    "es2021": true,
+    "node": true
+  },
+  "extends": ["eslint:recommended"],
+  "parserOptions": {
+    "ecmaVersion": 2022,
+    "sourceType": "module"
+  },
+  "rules": {
+    "indent": ["error", 2],
+    "linebreak-style": "off",
+    "quotes": ["error", "single"],
+    "semi": ["error", "always"],
+    "no-unused-vars": "error",
+    "no-console": "off",
+    "prefer-const": "error",
+    "no-var": "error",
+    "max-len": ["warn", { "code": 100 }],
+    "complexity": ["warn", 15],
+    "max-depth": ["warn", 5]
+  },
+  "overrides": [
+    {
+      "files": ["tests/**/*.js", "**/*.test.js", "**/*.spec.js"],
+      "env": {
+        "jest": true
+      },
+      "rules": {
+        "no-console": "off"
+      }
     },
-    "extends": ["eslint:recommended"],
-    "parserOptions": {
-        "ecmaVersion": 2022,
-        "sourceType": "module"
-    },
-    "rules": {
-        "indent": ["error", 4],
-        "linebreak-style": ["error", "unix"],
-        "quotes": ["error", "single"],
-        "semi": ["error", "always"],
-        "no-unused-vars": "error",
-        "no-console": "warn",
-        "prefer-const": "error",
-        "no-var": "error",
-        "max-len": ["warn", { "code": 100 }],
-        "complexity": ["warn", 10],
-        "max-depth": ["warn", 4]
-    },
-    "overrides": [
-        {
-            "files": ["tests/**/*.js", "**/*.test.js", "**/*.spec.js"],
-            "env": {
-                "jest": true
-            }
-        }
-    ]
+    {
+      "files": ["cli-tools/**/*.js", "agents/**/*.js", "examples/**/*.js"],
+      "rules": {
+        "no-console": "off"
+      }
+    }
+  ]
 }
