fix: corrigir TODOS os problemas de lint restantes usando MCP
✨ Conquistas:
- ✅ 0 erros de lint (era 180)
- ✅ 0 warnings críticos
- ✅ Indentação padronizada (2 espaços)
- ✅ Switch statements corrigidos
- ✅ Estrutura de código limpa

🔧 Correções aplicadas:
- Indentação em switch statements (github-agent.js, github-mcp-server.js, webhook-server.js)
- Padrão de 2 espaços para indentação
- Blocos case corretamente estruturados
- Line breaks padronizados

📊 Resultado final: EXIT CODE 0 - Lint PERFEITO!

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
         run: npm test
 
       - name: Check formatting
-        run: npm run format -- --check
+        run: npm run format:check
 
   security:
     name: Security Audit
