--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,7 +10,7 @@
     "sourceType": "module"
   },
   "rules": {
-    "indent": ["error", 2],
+    "indent": "off",
     "linebreak-style": "off",
     "quotes": ["error", "single"],
     "semi": ["error", "always"],
