fix: corrigir versionamento para v0.1.0-alpha (desenvolvimento inicial)
📋 Correções de versionamento semântico:
- Hero badge: v2.0 → v0.1.0-alpha
- Seção GitHub Agent: v2.0.0 → v0.1.0-alpha
- Comandos PowerShell: v2.0.0 → v0.1.0-alpha
- package.json: version field atualizado
- Descrição ajustada para refletir estado de desenvolvimento

🎯 Justificativa:
- Seguir SemVer: ainda estamos desenvolvendo o agente
- v0.1.0-alpha indica desenvolvimento inicial
- v2.0 seria para versão madura e estável
- Transparência sobre o estado atual do projeto

✅ Agora o versionamento está correto e realista

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "github-mastery",
-  "version": "1.0.0",
-  "description": "Domínio total do GitHub: API, automações, integrações e ferramentas avançadas",
+  "version": "0.1.0-alpha",
+  "description": "GitHub Agent MCP v0.1.0-alpha - Desenvolvimento inicial do framework de automação GitHub PowerShell",
   "main": "index.js",
   "type": "module",
   "scripts": {
