--- a/package.json
+++ b/package.json
@@ -69,8 +69,11 @@
     "@babel/core": "^7.28.0",
     "@babel/preset-env": "^7.28.0",
     "@jest/globals": "^30.0.3",
+    "@typescript-eslint/eslint-plugin": "^8.35.1",
+    "@typescript-eslint/parser": "^8.35.1",
     "babel-jest": "^30.0.2",
     "eslint": "^8.57.0",
+    "eslint-plugin-jest": "^29.0.1",
     "jest": "^30.0.3",
     "nodemon": "^3.0.2",
     "prettier": "^3.1.1"
