fix(ci): corrige pipeline e formatação
- Corrige validação do Prettier no CI
- Atualiza configuração do deploy de páginas
- Adiciona script de formatação dedicado
- Formata arquivos pendentes

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,8 @@ jobs:
         run: npm test
 
       - name: Check formatting
-        run: npm run format:check
+        run: |
+          npx prettier --check "**/*.{js,jsx,ts,tsx,json,md,html,css}"
 
   security:
     name: Security Audit
