fix(ci): resolve problemas de formatação e lint
- Atualiza configuração do ESLint para integrar com Prettier
- Corrige sintaxe do .eslintrc.json
- Melhora script de verificação de formatação no CI
- Adiciona dependências necessárias do ESLint e Prettier

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,8 +4,12 @@
     "es2021": true,
     "node": true
   },
-  "extends": ["eslint:recommended", "plugin:jest/recommended"],
-  "parserOptions": {
+  "extends": [
+    "eslint:recommended",
+    "prettier"
+  ],
+  "plugins": ["prettier"],
+  "parserOptions":
     "ecmaVersion": 2022,
     "sourceType": "module"
   },
