--- a/package.json
+++ b/package.json
@@ -73,7 +73,9 @@
     "@typescript-eslint/parser": "^8.35.1",
     "babel-jest": "^30.0.2",
     "eslint": "^8.57.0",
+    "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-jest": "^29.0.1",
+    "eslint-plugin-prettier": "^5.5.1",
     "jest": "^30.0.3",
     "nodemon": "^3.0.2",
     "prettier": "^3.1.1"
