--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,7 +9,7 @@
     "prettier"
   ],
   "plugins": ["prettier"],
-  "parserOptions":
+  "parserOptions": {
     "ecmaVersion": 2022,
     "sourceType": "module"
   },
