feat(scripts): add MCP server management utilities
- Add PowerShell script for server initialization
- Update npm scripts for MCP operations
- Add debug and production modes
- Include dependency checks and logging

--- a/package.json
+++ b/package.json
@@ -34,8 +34,15 @@
     "setup": "npm install && npm run format && npm run validate-env",
     "ci": "npm run validate && npm run validate-env",
     "health": "npm run validate-env && echo 'Projeto saudável!'",
-    "mcp": "node mcp/github-mcp-server.js",
+    "mcp": "node mcp/consolidated-mcp-server.js",
+    "mcp:legacy": "node mcp/github-mcp-server.js",
     "mcp:ecosystem": "node mcp/ecosystem-adapter.js",
+    "mcp:start": "node mcp/consolidated-mcp-server.js",
+    "mcp:start:debug": "set DEBUG=mcp:* && set LOG_LEVEL=debug && node mcp/consolidated-mcp-server.js",
+    "mcp:start:ps": "powershell -ExecutionPolicy Bypass -File scripts/start-mcp-server.ps1",
+    "mcp:health": "node -e \"console.log('MCP Health Check - TODO: Implement')\"",
+    "mcp:build:stealth": "powershell -ExecutionPolicy Bypass -File scripts/create-stealth-build.ps1",
+    "mcp:enhanced": "node mcp/github-mcp-server-enhanced.js",
     "deploy:ecosystem": "node scripts/deploy-to-ecosystem.js",
     "deploy:check": "node scripts/deploy-to-ecosystem.js --dry-run",
     "deploy:rollback": "node scripts/deploy-to-ecosystem.js --rollback",
