--- a/mcp-config.json
+++ b/mcp-config.json
@@ -1,13 +1,26 @@
 {
   "mcpServers": {
-    "github-mastery": {
+    "github-mastery-consolidated": {
+      "command": "node",
+      "args": ["./mcp/consolidated-mcp-server.js"],
+      "env": {
+        "GITHUB_TOKEN": "",
+        "MCP_SERVER_NAME": "github-mastery-consolidated",
+        "MCP_SERVER_VERSION": "2.0.0",
+        "VIREON_INTEGRATION": "true",
+        "RUST_AGENT_CORE": "true",
+        "PYTHON_AGENT_BRAIN": "true"
+      }
+    },
+    "github-mastery-legacy": {
       "command": "node",
       "args": ["./mcp/github-mcp-server.js"],
       "env": {
         "GITHUB_TOKEN": "",
         "MCP_SERVER_NAME": "github-mastery",
         "MCP_SERVER_VERSION": "1.0.0"
-      }
+      },
+      "enabled": false
     }
   },
   "allowedOriginsRegex": [
@@ -27,9 +40,44 @@
       "action": "list_repositories"
     },
     {
-      "key": "github-issues",
-      "description": "Manage GitHub issues",
-      "action": "manage_issues"
+      "key": "github-smart-commit",
+      "description": "Make AI-powered smart contribution",
+      "action": "smart_contribution"
+    },
+    {
+      "key": "github-health",
+      "description": "Check repository health",
+      "action": "repo_health_check"
+    },
+    {
+      "key": "github-ecosystem",
+      "description": "Get ecosystem status",
+      "action": "ecosystem_status"
     }
-  ]
+  ],
+  "vireonIntegration": {
+    "enabled": true,
+    "consciousnessLevel": "metacognitive",
+    "contextSharing": true,
+    "ruleSynchronization": true
+  },
+  "agentCapabilities": {
+    "rustCore": {
+      "enabled": true,
+      "performance": "10x",
+      "features": [
+        "zero-copy-operations",
+        "concurrent-api-calls",
+        "memory-efficient-caching"
+      ]
+    },
+    "pythonBrain": {
+      "enabled": true,
+      "models": [
+        "gpt-commit-generation",
+        "pattern-recognition",
+        "predictive-analytics"
+      ]
+    }
+  }
 }
