feat(giden): implement simulation mode for AIDEN integration
- Add checkFileExists method to detect AIDEN project
- Enable simulation mode when AIDEN bridge is not available
- Fix duplicate imports and enhance workflow generation
- All GIDEN tests now pass in simulation mode
- Ready for real AIDEN integration when bridge is implemented

--- a/mcp-config.json
+++ b/mcp-config.json
@@ -61,6 +61,19 @@
     "contextSharing": true,
     "ruleSynchronization": true
   },
+  "gidenIntegration": {
+    "enabled": true,
+    "aidenProjectPath": "C:\\Users\\João\\Desktop\\PROJETOS\\AGENTES_IA\\AIDEN_PROJECT",
+    "capabilities": [
+      "adaptive-learning",
+      "self-evolution",
+      "code-review",
+      "repo-optimization",
+      "workflow-generation"
+    ],
+    "learningMode": "continuous",
+    "confidenceThreshold": 0.85
+  },
   "agentCapabilities": {
     "rustCore": {
       "enabled": true,
