--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,13 +15,14 @@
     "linebreak-style": "off",
     "quotes": ["error", "single"],
     "semi": ["error", "always"],
-    "no-unused-vars": "error",
+    "no-unused-vars": ["error", { "argsIgnorePattern": "^_" }],
     "no-console": "off",
     "prefer-const": "error",
     "no-var": "error",
     "max-len": ["warn", { "code": 100 }],
-    "complexity": ["warn", 15],
-    "max-depth": ["warn", 5]
+    "complexity": ["warn", 20],
+    "max-depth": ["warn", 5],
+    "no-case-declarations": "warn"
   },
   "overrides": [
     {
