--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "eslint-plugin-prettier": "^5.5.1",
     "jest": "^30.0.3",
     "nodemon": "^3.0.2",
-    "prettier": "^3.1.1"
+    "prettier": "^3.1.1",
+    "supertest": "^7.1.3"
   }
 }
